1.6.2
-----
1. Fix light border on kwin titlebars when using background opacity
   and gradients.

1.6.1
-----
 1. Add option to have rounded popup menus.
 2. Allow rounded tooltips when not compositing.
 3. Fix kwin titlebar blending for striped backgrounds.
 4. Simplify faded menu item code.
 5. When drawing progressbar contents and label, use same calculations
    to determine position. Fixes odd text on some of Krita's progressbar/spin
    button widgets.
 6. Fix menubar-hiding kwin icon when not blending menubar/titlebar.
 7. 'Fix' konsole titlebar opacity. Note: Menubar is still opaque :-(
 8. Fix background gradient in titlebars when using translucent backgrounds.
 9. Square tooltips for OpenOffice.org
10. Fix windows build.

1.6.0
-----
 1. Add 'glow' focus option - this is now the default.
 2. Fix potential crash in rgbToHsv
 3. Use square-ish focus for view items if using squared selection.
 4. If titlebar opacity=100, and window/dialog opacity does not, then use
    window/dialog opacity for titlebar.
 5. Fix some compiler warnings under openSUSE 11.3
 6. Refactor blur-behind code.
 7. Update XBar code to r1158
 8. Remove KFileDialog code - has been in KDE since 4.1
 9. Dont apply background opacity to kaffeine.
10. Remove amarok from list off apps not to apply opacity to.
11. Fix MDI window border when using opacity.
12. Improved glow mouse-over for non-standard sidebar buttons.
13. Fix dock widget titlebar alignment when set to center on full width (not
    just on text space width).
14. Add option to use slight rounding for window decorations - set in style
    config, as option also affects MDI windows.
15. Added option to specify tooltip background appearance.
16. Added options to draw shaded, or faded, group boxes.
17. Added options to specify location of group box label; inside, outside, centered.
18. Fix disabled looking slider in KDE colour dialog.
19. Draw coloured mouse over for 'checked' toggle buttons.