@@ -2,6 +2,7 @@
 -----
 1. Fix light border on kwin titlebars when using background opacity
    and gradients.
+2. Dont add light border to kwin titlebars if not using side borders.
 
 1.6.1
 -----
